<resources>

    <string name="app_name">SlideMenuDemo</string>
    <string name="primary_shadow_width">Primary Shadow Width</string>
    <string name="secondary_shadow_width">Secondary Shadow Width</string>
    <string name="slide_left_enable">Slide Left Enable</string>
    <string name="slide_left_disable">Slide Left Disable</string>
    <string name="slide_right_enable">Slide Right Enable</string>
    <string name="slide_right_disable">Slide Right Disable</string>
    <string name="slide_mode">Slide Mode</string>
    <string name="slide_window">Slide Window</string>
    <string name="slide_content">Slide Content</string>
    <string name="slidemenu_attribute">SlideMenu Attribute</string>
    <string name="slidemenu_with_horizontal_scroll_view">SlideMenu With HorizontalScrollView</string>
    <string name="slidemenu_with_view_pager">SlideMenu With ViewPager</string>
    <string name="slidemenu_with_web_view">SlideMenu With WebView</string>
    <string name="slidemenu_with_horizontal_scroll_view_and_view_pager">SlideMenu With HorizontalScrollView And ViewPager</string>
    <string name="slidemenu_callback">SlideMenu Callback</string>
    <string name="slidemenu_state">State: \n%1$s\nOffset: \n%2$s</string>
    <string name="slidemenu_state_close">Close</string>
    <string name="slidemenu_state_open">Open</string>
    <string name="slidemenu_state_drag">Drag</string>
    <string name="slidemenu_state_scroll">Scroll</string>
    <string name="large_text">Android is a Linux-based operating system[12] designed primarily for touchscreen mobile devices such as smartphones and tablet computers. Initially developed by Android, Inc., which Google backed financially and later bought in 2005,[13] Android was unveiled in 2007 along with the founding of the Open Handset Alliance: a consortium of hardware, software, and telecommunication companies devoted to advancing open standards for mobile devices.[14] The first Android-powered phone was sold in October 2008.[15]
Android is open source and Google releases the code under the Apache License.[12] This open source code and permissive licensing allows the software to be freely modified and distributed by device manufacturers, wireless carriers and enthusiast developers. Additionally, Android has a large community of developers writing applications ("apps") that extend the functionality of devices, written primarily in a customized version of the Java programming language.[16] In October 2012, there were approximately 700,000 apps available for Android, and the estimated number of applications downloaded from Google Play, Android\'s primary app store, was 25 billion.[17][18]</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

</resources>